<resources>
    <string name="app_name">BugeFiles</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BugeFiles</string>
    <string name="nav_header_subtitle">Your file manager</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_view_list">List view</string>
    <string name="action_view_grid">Grid view</string>
    <string name="action_sort">Sort</string>
    <string name="action_new_folder">New</string>
    <string name="action_theme">Toggle theme</string>

    <string name="menu_files">Files</string>
    <string name="menu_recent">Recent</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_settings">Settings</string>

    <string name="label_internal_storage">Internal Storage</string>
    <string name="label_empty_folder">This folder is empty</string>
    <string name="label_permission_required">Storage permission is required to browse files</string>
    <string name="btn_grant_permission">Grant Permission</string>
    <string name="label_files">Files</string>
    <string name="label_folders">Folders</string>

    <string name="label_recent_files">Recent Files</string>
    <string name="label_no_recent">No recent files</string>

    <string name="label_favorites">Favorites</string>
    <string name="label_no_favorites">No favorites yet</string>

    <string name="label_settings">Settings</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_theme_light">Light</string>
    <string name="setting_theme_dark">Dark</string>
    <string name="setting_theme_system">Follow system</string>
    <string name="setting_language">Language</string>
    <string name="setting_show_hidden">Show hidden files</string>
    <string name="setting_about">About</string>
    <string name="setting_version">Version</string>

    <string name="action_open">Open</string>
    <string name="action_copy">Copy</string>
    <string name="action_move">Move</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_properties">Properties</string>
    <string name="action_add_favorite">Add to favorites</string>
    <string name="action_remove_favorite">Remove from favorites</string>

    <string name="sort_name_asc">Name (A–Z)</string>
    <string name="sort_name_desc">Name (Z–A)</string>
    <string name="sort_date_newest">Date (newest)</string>
    <string name="sort_date_oldest">Date (oldest)</string>
    <string name="sort_size_largest">Size (largest)</string>
    <string name="sort_size_smallest">Size (smallest)</string>

    <string name="dialog_create_title">Create new</string>
    <string name="dialog_create_file">File</string>
    <string name="dialog_create_folder">Folder</string>
    <string name="dialog_new_folder_title">New Folder</string>
    <string name="dialog_new_folder_hint">Name</string>
    <string name="dialog_rename_title">Rename</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Delete \"%s\"?</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="error_cannot_open">Cannot open this file</string>
    <string name="error_delete_failed">Failed to delete</string>
    <string name="error_rename_failed">Operation failed</string>
    <string name="msg_folder_created">Folder created</string>
    <string name="msg_file_created">File created</string>
    <string name="msg_deleted">Deleted successfully</string>
    <string name="msg_renamed">Renamed successfully</string>
    
    <string name="label_no_search_results">No results found</string>
</resources>